--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "rollup-plugin-serve": "^1.0.1",
         "rollup-plugin-typescript2": "^0.25.3",
         "rollup-plugin-uglify": "^6.0.4",
+        "serialize-javascript": ">=3.1.0",
         "typescript": "^3.7.4"
     }
 }
