--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.2",
     "description": "A Phaser 3 Project Template using Rollup and TypeScript",
     "main": "src/game.ts",
+    "type": "module",
     "scripts": {
         "dev": "rollup --config rollup.config.dev.js",
         "build": "rollup --config rollup.config.dist.js",
@@ -18,16 +19,15 @@
         "url": "https://github.com/photonstorm/phaser3-typescript-project-template/issues"
     },
     "homepage": "https://github.com/photonstorm/phaser3-typescript-project-template#readme",
-    "dependencies": {},
     "devDependencies": {
-        "@rollup/plugin-replace": "^2.3.0",
+        "@rollup/plugin-commonjs": "^28.0.2",
+        "@rollup/plugin-node-resolve": "^16.0.0",
+        "@rollup/plugin-replace": "^6.0.2",
+        "@rollup/plugin-terser": "^0.4.4",
         "phaser": "^3.22.0",
         "rollup": "^3.29.5",
-        "rollup-plugin-commonjs": "^10.1.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-serve": "^1.0.1",
-        "rollup-plugin-typescript2": "^0.25.3",
-        "rollup-plugin-uglify": "^6.0.4",
+        "rollup-plugin-serve": "^3.0.0",
+        "rollup-plugin-typescript2": "^0.36.0",
         "typescript": "^3.7.4"
     }
 }
